# TFM

./: .dockerignore  .env  .env.example  .gitignore  INFO_PROYECTO.md  Makefile  PROMPT_TFM_LaLiga_Monorepo.txt  README.md  README_CALIBRACION.md  README_CRITERIO_MODELO_FINAL.md  README_HIPERPARAMETROS.md  README_MARCO_EXPERIMENTAL_CAP8.md  README_METRICAS_EVALUACION.md  README_TFM_CAP6_DATOS.md  README_VALIDACION_EXPERIMENTAL.md  docker-compose.yml  matches_laliga.csv  memoria.md  out.json  out_api.json
MEMORIA/: ejemplo_memoria_PFM.docx  ~$emplo_memoria_PFM.docx  ~WRL0004.tmp  ~WRL0005.tmp  ~WRL0901.tmp
backend/: Dockerfile  api_data.py  main.py  odds_data.py  predict.py  preprocessing.py  pyproject.toml  requirements.txt  simulate.py  train.py
backend/app/: __init__.py
backend/app/api/v1/: routes_odds.py  routes_predict.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/models/: model_store.py
backend/app/schemas/: datasets.py  model.py  predict.py
backend/app/services/: datasets.py  elo.py  evaluation.py  features.py  football_data.py  odds_api.py  predict.py  train.py
backend/tests/: test_datasets_manual_results.py  test_evaluation.py  test_features.py  test_odds_api.py  test_predict_routes.py  test_train_eda.py
backend/tools/: apply_semana29_results.py  generate_memory_figures.py  run_train_for_tfm.py  update_roi_jornada.bat
data/: README.md
docs/: NAVEGACION_RAPIDA.md
etl/: Dockerfile  build_laliga_enriched.py  requirements.txt
frontend/: .eslintrc.cjs  Dockerfile  app.py  requirements.txt  tsconfig.json
infra/: Makefile  (+1 more)
(+93 files in other folders)
