[project]
name = "tfm-laliga-backend"
version = "0.1.0"
description = "Backend FastAPI para prediccion 1X2 de LaLiga"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
plugins = []
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
